--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.0.2",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
